syntax = "proto3";
import "google/protobuf/empty.proto";
import "brand.proto";
option go_package = ".;proto";

service Goods {
  // 商品
  rpc GoodsList(GoodsFilterRequest) returns (GoodsListResponse);
  rpc BatchGetGoods(BatchGoodsInfo) returns (GoodsListResponse);
  rpc CreateGods(CreateGoodsInfo) returns (GoodsInfoResponse);
  rpc DeleteGoods(DeleteGoodsInfo) returns(google.protobuf.Empty);
  rpc UpdateGoods(UpdateGoodsInfo) returns (google.protobuf.Empty);
  rpc GetGoodsDetail(GoodsInfoRequest) returns (GoodsInfoResponse);


}

message GoodsFilterRequest{
  int32 priceMin = 1;
  int32 priceMax = 2;
  bool isHot = 3;
  bool isNew = 4;
  bool isTab = 5;
  int32 topCategory = 6;
  int32 pages = 7;
  int32 pageSize = 8;
  string keyWord = 9;
  int32 brand = 10;
}
message GoodsListResponse{
  int32 total = 1;
  repeated GoodsInfoResponse data = 2;
};
message BatchGoodsInfo{
  repeated int32 id = 1;
};
message GoodsInfoResponse{
  int32 id = 1;
  int32 categoryId = 2;
  int32 brandId = 3;
  bool onSale = 4;
  bool shipFree = 5;
  bool isNew = 6;
  bool isHot = 7;
  string name = 8;
  string goodsSn = 9;
  int32 clickNum = 10;
  int32 soldNum = 11;
  int32 favNum = 12;
  float marketPrice = 13;
  float shopPrice = 14;
  string goodsBrief = 15;
  repeated string imageUrl = 16;
  repeated string description = 17;
  string goodsFrontImage = 18;
  uint64 createdAt = 19;
  bool isDeleted = 20;
  CategoryBriefInfoResponse category = 21;
  BrandInfoResponse brand = 22;
};
message CreateGoodsInfo{
  int32 id = 1;
  int32 categoryId = 2;
  int32 brandId = 3;
  bool onSale = 4;
  bool shipFree = 5;
  bool isNew = 6;
  int32 stock = 7;
  string name = 8;
  string goodsSn = 9;
  int32 clickNum = 10;
  int32 soldNum = 11;
  int32 favNum = 12;
  float marketPrice = 13;
  float shopPrice = 14;
  string goodsBrief = 15;
  repeated string imageUrl = 16;
  repeated string description = 17;
  string goodsFrontImage = 18;
};
message DeleteGoodsInfo{
  int32 id = 1;
};
message UpdateGoodsInfo{
  int32 id = 1;
  int32 categoryId = 2;
  int32 brandId = 3;
  bool onSale = 4;
  bool shipFree = 5;
  bool isNew = 6;
  int32 stock = 7;
  string name = 8;
  string goodsSn = 9;
  int32 clickNum = 10;
  int32 soldNum = 11;
  int32 favNum = 12;
  float marketPrice = 13;
  float shopPrice = 14;
  string goodsBrief = 15;
  repeated string imageUrl = 16;
  repeated string description = 17;
  string goodsFrontImage = 18;
};
message GoodsInfoRequest{
  int32 id = 1;
};

message CategoryBriefInfoResponse{
  int32 id = 1;
  string name = 2;
};
message CategoryFilterRequest{
  uint32 id = 1;
  bool isTab = 2;
};